--- a/Frontend/hello/templates/active_directory/index.html
+++ b/Frontend/hello/templates/active_directory/index.html
@@ -197,7 +197,7 @@
                 //let Passw = document.getElementById("password-field").value;
                 let id = encodeURIComponent("{{ id }}");
                 let domain = encodeURIComponent("{{ domain }}");
-                var result = await fetch(id + `/changePassword`,{
+                var result = await fetch(id + `/ChangePassword`,{
                     method: "POST",
                     headers: new Headers({
                         'content-Type': 'application/json',
