--- a/Frontend/hello/templates/active_directory/index.html
+++ b/Frontend/hello/templates/active_directory/index.html
@@ -213,7 +213,7 @@
                 })
                 var data = await result.json();
                 if (result.ok) {
-                    document.getElementById('changePassw-text').innerText = `<p>Новыый пароль: ${data.password} </p>`
+                    document.getElementById('changePassw-text').innerText = `Новый пароль: ${data.password}`
                 } else {
 
                 }
