--- a/Frontend/hello/templates/group/index.html
+++ b/Frontend/hello/templates/group/index.html
@@ -30,10 +30,12 @@
                     }),
                     body: JSON.stringify({
                         "user": {
-                            "name": id
+                            "SamAccountName": id,
+                            "Domain":{"Forest":domain}
                         },
-                        "group": groupName,
-                        "domain": domain
+                        "group": {
+                            "Name": groupName
+                        }
                     }),
                     verify: false
                 })
